jwt authorization for user profiles
