# users/src/main/java/com/users/users/dtos/UserLoginDTO.java
@@ -1,3 +1,3 @@
 package com.users.users.dtos;
 
-public record UserLoginDTO(String email, String password) {}
+public record UserLoginDTO(String email, String password, int profileCode) {}
